--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "grunt test"
   },
   "dependencies": {
+    "bigiot-js": "^0.6.3",
     "noflo": "^1.0.0",
     "noflo-core": "^0.5.0",
     "noflo-dom": "^0.3.0",
