--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "license": "MIT",
   "scripts": {
-    "test": "grunt test"
+    "test": "npm run lint &&& grunt test",
+    "lint": "eslint components/*.js"
   },
   "dependencies": {
     "bigiot-js": "^0.6.3",
@@ -19,6 +20,9 @@
   },
   "devDependencies": {
     "chai": "^4.0.0",
+    "eslint": "^4.18.0",
+    "eslint-config-airbnb-base": "^12.0.0",
+    "eslint-plugin-import": "^2.7.0",
     "grunt": "^1.0.1",
     "grunt-coffeelint": "^0.0.16",
     "grunt-contrib-coffee": "^2.0.0",
