--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "bigiot-js": "^0.6.3",
     "get-function-params": "^2.0.6",
+    "leaflet": "^1.3.4",
     "noflo": "^1.0.0",
     "noflo-bigiot": "0.0.2",
     "noflo-core": "^0.5.0",
     "noflo-dom": "^0.3.0",
     "noflo-interaction": "^0.3.0",
     "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "react-dom": "^16.6.0",
+    "react-leaflet": "^2.1.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -31,7 +33,7 @@
     "grunt-coffeelint": "^0.0.16",
     "grunt-contrib-coffee": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-gh-pages": "^2.1.0",
+    "grunt-gh-pages": "^3.1.0",
     "grunt-mocha-phantomjs": "^4.0.0",
     "grunt-mocha-test": "^0.13.2",
     "grunt-noflo-browser": "^1.5.0",
