--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
 /node_modules/
-/browser/
+/dist/
 /components/*/
-/spec/*.js
-/spec/*.xml
-/spec/runner.html
 flowhub.json
 *~
-gh-pages/
-LICENSE-MIT
-*.entry.js
