--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "license": "MIT",
   "scripts": {
-    "test": "npm run lint &&& grunt test",
-    "lint": "eslint components/*.js"
+    "build": "webpack",
+    "lint": "eslint components/*.js",
+    "pretest": "npm run lint && npm run build",
+    "start": "webpack-dev-server",
+    "test": "fbp-spec --address ws://localhost:3569 --command \"noflo-runtime-headless -f dist/app.js\" spec/*.yaml"
   },
   "dependencies": {
     "bigiot-js": "^0.6.3",
@@ -34,10 +37,13 @@
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
     "fbp-loader": "^0.1.2",
+    "fbp-spec": "^0.6.6",
     "mocha": "^5.0.0",
     "noflo-component-loader": "^0.3.2",
+    "noflo-runtime-headless": "^0.1.0",
     "webpack": "^4.24.0",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "keywords": [
     "noflo"
