--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chai": "^4.2.0",
     "coffee-loader": "^0.9.0",
     "coffeescript": "^2.3.2",
+    "copy-webpack-plugin": "^4.6.0",
     "eslint": "^4.18.0",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
