Fix build by adding a placeholder fbp-spec file

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "webpack",
     "lint": "eslint components/*.js",
+    "postinstall": "noflo-cache-preheat",
     "pretest": "npm run lint && npm run build",
     "start": "webpack-dev-server",
     "test": "fbp-spec --address ws://localhost:3569 --command \"noflo-runtime-headless -f dist/app.js\" spec/*.yaml"
