--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "noflo-runtime-postmessage": "^0.10.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-leaflet": "^2.1.1"
+    "react-leaflet": "^2.1.1",
+    "where": "^0.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
