--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "fbp-spec --address ws://localhost:3569 --command \"noflo-runtime-headless -f dist/app.js\" spec/"
   },
   "dependencies": {
+    "@material-ui/core": "^3.3.2",
     "bigiot-js": "^0.6.3",
     "get-function-params": "^2.0.6",
     "leaflet": "^1.3.4",
