--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
-    "lint": "eslint components/*.js",
+    "lint": "eslint *.js components/*.js",
     "lint-fix": "eslint --fix components/*.js",
     "postinstall": "noflo-cache-preheat",
     "pretest": "npm run lint && npm run build",
