--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.3.2",
+    "@material-ui/icons": "^3.0.1",
     "bigiot-js": "^0.6.3",
     "get-function-params": "^2.0.6",
     "leaflet": "^1.3.4",
