Move test runner to a separate entrypoint

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "postinstall": "noflo-cache-preheat",
     "pretest": "npm run lint && npm run build",
     "start": "webpack-dev-server",
-    "test": "fbp-spec --address ws://localhost:3569 --command \"noflo-runtime-headless -f dist/app.js\" spec/"
+    "test": "fbp-spec --address ws://localhost:3569 --command \"noflo-runtime-headless -f dist/test.js\" spec/"
   },
   "dependencies": {
     "@material-ui/core": "^3.3.2",
