--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "webpack",
     "lint": "eslint *.js components/*.js",
-    "lint-fix": "eslint --fix components/*.js",
+    "lint-fix": "eslint --fix *.js components/*.js",
     "postinstall": "noflo-cache-preheat",
     "pretest": "npm run lint && npm run build",
     "start": "webpack-dev-server",
@@ -49,9 +49,11 @@
     "mocha": "^5.0.0",
     "noflo-component-loader": "^0.3.2",
     "noflo-runtime-headless": "^0.1.0",
+    "sw-precache-webpack-plugin": "^0.11.5",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "webpack-pwa-manifest": "^3.7.1"
   },
   "keywords": [
     "noflo"
