--- a/manifest.json
+++ b/manifest.json
@@ -35,7 +35,7 @@
   "short_name": "ParkMyCar",
   "orientation": "portrait",
   "display": "standalone",
-  "start_url": "/",
+  "start_url": "bigiot-driver-app/",
   "description": "Find a parking spot nearby",
   "background_color": "#0275E8",
   "theme_color": "#0275E8"
