--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
     "bigiot-js": "^0.6.3",
+    "density-clustering": "^1.3.0",
     "get-function-params": "^2.0.6",
     "leaflet": "^1.3.4",
     "noflo": "^1.0.0",
@@ -27,7 +28,9 @@
     "noflo-core": "^0.5.0",
     "noflo-dom": "^0.3.0",
     "noflo-interaction": "^0.3.0",
+    "noflo-nodejs": "^0.10.1",
     "noflo-runtime-postmessage": "^0.10.1",
+    "noflo-strings": "^0.4.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-leaflet": "^2.1.1",
