--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,32 @@
 {
   "icons": [
     {
-      "src": "https://flowhub.github.io/bigiot-driver-app/icons/icon_512x512.png",
+      "src": "/icons/icon_512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "https://flowhub.github.io/bigiot-driver-app/icons/icon_384x384.png",
+      "src": "/icons/icon_384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "https://flowhub.github.io/bigiot-driver-app/icons/icon_256x256.png",
+      "src": "/icons/icon_256x256.png",
       "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "https://flowhub.github.io/bigiot-driver-app/icons/icon_192x192.png",
+      "src": "/icons/icon_192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://flowhub.github.io/bigiot-driver-app/icons/icon_128x128.png",
+      "src": "/icons/icon_128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "https://flowhub.github.io/bigiot-driver-app/icons/icon_96x96.png",
+      "src": "/icons/icon_96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     }
